--- a/html/01. Structure/attributes.html
+++ b/html/01. Structure/attributes.html
@@ -1,1 +1,2 @@
-attributes.html
+<!-- Attributes provide additional information about the contents of an element. -->
+<!-- They appear on the opening tag of the element and are made up of two parts: a name and a value, separated by an equals sign. -->
